--- a/Spark HTML/pag2/index.html
+++ b/Spark HTML/pag2/index.html
@@ -28,7 +28,7 @@
             <div class=" columns small-6 medium-2 small-offset-1 medium-offset-1 align-self-center large-2">
                 <a href="#" class=""><img src="assets/AIT Logotipo.png" alt="" width="100%"></a>
             </div>
-            <div class="show-for-medium columns small-5 medium-7 medium-offset-1 align-self-bottom large-5 large-offset-3"
+            <div class="show-for-medium columns small-5 medium-7 medium-offset-1 align-self-bottom large-6 large-offset-2"
                 style="background-color:transparent">
                 <div class="top-bar">
                     <div class="top-bar-left">
@@ -105,35 +105,79 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="columns small-10 small-offset-1 medium-4">
-                <div class="serv-di-web">
-                        <center><img src="/pag2/assets/servicios/icon-serv-desweb.png"  alt="" width="150px"
-                            srcset="" class="icon-serv"></center>
-                       <h4 class="serv-text text-center">Desarrollo web</h4>
-                       <p class="text-center serv-text">
-                            Sitios a la medida de cada necesidad, escala y presupuesto. 
-                            Diseño responsive apto para dispositivos móviles. 
-                            Organización de la información y creación del repertorio gráfico. 
-                            Integración con redes sociales.
-                       </p>
+
+        <div class="row align-center">
+            <div class="columns small-10 small-offset-0 medium-4">
+                <div class="serv-di-web card">
+                    <center><img src="./assets/servicios/icon-serv-desweb.png" alt="" width="150px" srcset="" class="icon-serv"></center>
+                    <div class="card-divider"></div>
+                    <h4 class="serv-text text-center">Desarrollo web</h4>
+                    <div class="card-divider"></div>
+                    <p class="text-center serv-text" style="margin-top:2vh;padding: 5px">
+                        Sitios a la medida de cada necesidad, escala y presupuesto.
+                        Diseño responsive apto para dispositivos móviles.
+                        Organización de la información y creación del repertorio gráfico.
+                        Integración con redes sociales.
+                    </p>
                 </div>
             </div>
-            <div class="columns small-10 medium-3">
-                Diseño Web
+            <div class="columns  small-10 medium-4">
+                <div class="card serv-di-web">
+                    <center><img src="https://img.icons8.com/nolan/1600/web-design.png" alt="" width="150px"></center>
+                    <div class="card-divider"></div>
+                    <h4 class="serv-text text-center">Diseño Web</h4>
+                    <div class="card-divider"></div>
+                    <p class="text-center serv-text" style="margin-top:2vh;padding: 5px">
+                        Desarrollamos sitios con administradores de contenidos
+                        orientados fundamentalmente a mantener actualizada
+                        la información del sitio.
+                    </p>
+                </div>
             </div>
-            <div class="columns small-10 medium-3" class="serv-di-web">
-                Business Intelligence
+            <div class="columns small-10 medium-4">
+                <div class="card serv-di-web">
+                    <center><img src="https://cdn.iconscout.com/icon/free/png-256/brain-personal-development-analytical-lateral-business-intelligence-6-5571.png"
+                            width="130px" style="padding-bottom:7px;padding-top: 7px" alt=""></center>
+                    <div class="card-divider"></div>
+                    <h4 class="serv-text text-center">Business Intelligence</h4>
+                    <div class="card-divider"></div>
+                    <p class="text-center serv-text" style="margin-top:2vh;padding: 5px">
+                        Ofrecemos una gama completa de servicios de BI empresarial,
+                        que abarcan desde la preparación, evaluación de la madurez y
+                        análisis de requisitos hasta el diseño y desarrollo
+                        completo del proyecto de BI.
+                    </p>
+                </div>
             </div>
-            <div class="columns small-10 medium-3">
-                Aplicaciones para todo tipo de plataformas (Android,Iphone)
+        </div>
+        <div class="row align-center">
+            <div class="columns small-10 medium-4">
+                <div class="serv-di-web card">
+                    <center><img src="https://www.insidesoftwares.com/images/mobile-app.png" width="150px" alt="" style="padding-bottom:7px;padding-top: 7px"></center>
+                    <div class="card-divider"></div>
+                    <h5 class="serv-text text-center">Apps para Android y Iphone</h5>
+                    <div class="card-divider"></div>
+                    <p class="text-center serv-text" style="margin-top:2vh;padding: 5px">
+                        Hacemos, desde cero, tus Apps móviles, por lo que esta será totalmente
+                        personalizada solo para ti. Nos ocupamos de
+                        realizar desde el desarrollo hasta la publicación de la aplicación.
+                    </p>
+                </div>
             </div>
-            <div class="columns small-10 medium-3">
-                Soporte Técnico
+            <div class="columns small-10 medium-4">
+                <div class="serv-di-web card">
+                    <center><img src="https://www.insidesoftwares.com/images/mobile-app.png" width="150px" alt="" style="padding-bottom:7px;padding-top: 7px"></center>
+                    <div class="card-divider"></div>
+                    <h5 class="serv-text text-center">Servicio Tecnico</h5>
+                    <div class="card-divider"></div>
+                    <p class="text-center serv-text" style="margin-top:2vh;padding: 5px">
+                            Servicio, instalación, configuración, reparación y mantenimiento 
+                            de todo tipo de notebooks, tablets, dispositivos y hardware de 
+                            todas las marcas.
+                    </p>
+                </div>
             </div>
-            <h5>Si no hace lo que le decimos
-                seguro quiebra, confie en nuestra palabra
-            </h5>
+
         </div>
     </section>
 
