nose que modifique

--- a/Spark HTML/pag2/index.html
+++ b/Spark HTML/pag2/index.html
@@ -90,8 +90,8 @@
 
     </section>
 
-    <section id="servicios" class="section-servicios">
-        <div class="pq-elergirnos">
+    <section id="servicios" class="section-servicios" >
+        <div class="pq-elergirnos" style="background-color: rgb(121, 145, 26);">
             <div class="row align-center">
                 <div class="columns smalls-12-medium-3 align-self-middle">
                     <h2 class="text-center white-text" style="font-family: 'Righteous', cursive;">¿Por qué elegirnos?</h2>
@@ -164,7 +164,7 @@
                     </p>
                 </div>
             </div>
-            <div class="columns small-10 medium-4">
+            <!-- <div class="columns small-10 medium-4">
                 <div class="serv-di-web card">
                     <center><img src="https://www.insidesoftwares.com/images/mobile-app.png" width="150px" alt="" style="padding-bottom:7px;padding-top: 7px"></center>
                     <div class="card-divider"></div>
@@ -176,7 +176,7 @@
                             todas las marcas.
                     </p>
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </section>
